# LIMSgen

./: .env  .env.backup.1771656225  .env.backup.1771742629  .env.backup.1771776930  .env.backup.1771889143  .env.backup.1772396310  API_REFERENCE.md  Cargo.toml  DEVELOPER_GUIDE.md  FAQ.md  README.md  USER_GUIDE.md  auth.rs  auth_handlers.rs  config.rs  db.rs  error.rs  gitignore  handlers.rs  main.rs  models.rs  monitoring.rs  web_interface.html
lims-frontend/: package-lock.json  package.json
lims-frontend/src/: App.css  App.js  index.css  index.js
lims-frontend/src/components/: AdvancedFilters.js  Badge — копия.js  Badge.js  BatchImportModal.js  Button.js  Dashboard.css  Dashboard.js  Equipment.js  ErrorBoundary.js  ErrorMessage.js  Experiments.js  FormGroup.js  Header.js  Input.js  Loading.js  LoadingOverlay.js  Login.js  Modal.js  Modals.js  Reagents.js  Reports.js  Select.js  StatsCard.js  SuccessMessage.js  Table.js  TextArea.js  Toast.css  Toast.js  Users.js  importExportUtils.js  Новый текстовый документ.txt
lims-frontend/src/components/Modals/: BatchModals.js  BatchUsageInput.js  ChangePasswordModal.js  EquipmentModals.js  HazardComponents.js  Modals.js  PlacementComponents.js  PrintComponents.js  ReagentModals.js  UsageHistoryModal.js  UserModals.js  helpers.js  index.js  styles.js
lims-frontend/src/components/hooks/: useReagents.js  useRooms.js
lims-frontend/src/services/: api.js
src/: audit.rs  auth.rs  auth_handlers.rs  batch_handlers.rs  config.rs  db.rs  equipment_handlers.rs  error.rs  experiment_handlers.rs  filter_handlers.rs  handlers.rs  import_export.rs  jwt_rotation.rs  main.rs  models.rs  monitoring.rs  pagination.rs  placement_handlers.rs  reagent_handlers.rs  report_handlers.rs  room_handlers.rs  validator.rs
src/models/: batch.rs  batch_placement.rs  experiment.rs  mod.rs  reagent.rs
src/query_builders/: README.md  mod.rs  mod.txt
src/query_builders/filters/: builder.rs  enums.rs  mod.rs  value.rs  whitelist.rs
src/query_builders/fts/: config.rs  mod.rs
src/query_builders/pagination/: mod.rs  time.rs
src/query_builders/sql/: count.rs  mod.rs  select.rs
src/query_builders/utils/: mod.rs  validators.rs
src/repositories/: mod.rs
