[package]
name = "lims"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Laboratory Information Management System"
license = "MIT"
repository = "https://github.com/Emil9405/LIMSgen"
keywords = ["laboratory", "management", "inventory", "api", "web"]
categories = ["science", "web-programming"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
notify = "6.1"
notify-debouncer-mini = "0.4"
walkdir = "2"
actix-multipart = "0.6"
futures-util = "0.3"
csv = "1.3"
strum = { version = "0.27", features = ["derive"] }





dotenvy = "0.15"
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication and security
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Configuration and environment

anyhow = "1.0"
toml = "0.9.7"
libc = "0.2.175"
tempfile = "3.21.0"
actix-files = "0.6.8"
calamine = "0.31.0"
async-trait = "0.1.89"
lazy_static = "1.5.0"
regex = "1.12.2"
sql_query_builder = "2.5.2"

[dev-dependencies]
# Testing

tokio-test = "0.4"
actix-rt = "2"

[profile.release]
# Production optimizations
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Development optimizations
opt-level = 0
debug = true
overflow-checks = true

[[bin]]
name = "lims"
path = "src/main.rs"

[features]
default = []
# Optional features for future extensions
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
tls = ["actix-web/rustls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
